    (thanks to Alexander Kjeldaas)
  * threads
    ** bug fix: threads stacks belonging to dead threads are freed by the
       next exiting thread, no need to gc to collect thread stacks anymore
    ** minor incompatible change: INTERRUPT-THREAD-ERROR-ERRNO removed
    ** WITH-RECURSIVE-LOCK can be nested in a WITH-MUTEX for the same lock
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** SUBTYPEP is slightly more accurate on heinously complicated
       CONS types where some of the members have uncertain (in the
       NIL, NIL sense) type relationships to each other.

changes in sbcl-0.9.5 relative to sbcl-0.9.4:
  * new feature: timers based on Zach Beane's excellent timer package
  * added support for the following external formats: koi8-u,
    x-mac-cyrillic, cp437, cp850, cp852, cp855, cp857, cp860, cp861,
    cp862, cp863, cp864, cp865, cp866, cp869, cp874, iso-8859-2,
    iso-8859-3, iso-8859-4, iso-8859-5, iso-8859-6, iso-8859-7,
    iso-8859-8, iso-8859-9, iso-8859-10, iso-8859-11, iso-8859-13,
    iso-8859-14, cp1250, cp1251, cp1252, cp1253, cp1254,
    cp1255,cp1256, cp1257, cp1258 (contributed by Ivan Boldyrev)
  * incompatible change: a threaded SBCL will no longer revert to
    non-threaded mode on non-NPTL systems, but refuse to start entirely.
  * bug fix: interrupts are disabled until startup is complete; no
    more sigsegvs when receiving a signal to soon
  * optimization: faster 32-bit SB-ROTATE-BYTE:ROTATE-BYTE on non-x86/ppc
    platforms
  * bug fix: add a workaround for the memory randomization features in
    Linux kernels >= 2.6.12 that interfere with SBCL's memory maps. This
    workaround will only be in effect on systems with the proc filesystem
    mounted.
  * bug fix: printing objects of type HASH-TABLE signals a
    PRINT-NOT-READABLE error when *READ-EVAL* is NIL.  (reported by
    Faré Rideau)
  * bug fix: GET-INTERNAL-REAL-TIME now works even for processes that